# automation-product-framework

./: .env.example  .pre-commit-config.yaml  2022.json  2023.json  CHANGELOG.md  docker-compose.yaml  logging.conf  manage.py  pyproject.toml  readme.md
background/: __init__.py  apps.py  celery.py
background/actions/: __init__.py  create_header_issue_daily.py  create_subissue_daily.py  event_close_task.py  event_daily.py  event_individual_plan.py  event_one_to_one.py  event_review_code.py  generate_plan_products.py  sending_notify_month_result.py  sending_notify_week_result.py  sending_plan_and_fact.py  set_close_task_on_product_manager.py  try_closed_header_issue_daily.py
background/models/: JiraAssigne.py  JiraComment.py  JiraCommentsList.py  JiraIssue.py  JiraIssueField.py  JiraIssueList.py  JiraIssueStatus.py  JiraIssueTransition.py  JiraReporter.py  JiraSubtaskIssue.py  JiraSubtaskIssueField.py  NotifyDaily.py
background/service/: Jira.py  Sauron.py  Telegram.py  Utils.py  __init__.py
docker/: app.Dockerfile  nginx.Dockerfile
docker/config/: nginx.default
product_app/: Config.py  admin.py  celery.py  models.py  views.py
product_app/controllers/: EventsViewSets.py  NamespacesViewSets.py  PlansViewSets.py  ProductsViewSets.py
product_app/filters/: EventsDateFilter.py  PlansDateFilter.py
product_app/jobs/: EventDailyJob.py
product_app/migrations/: 0001_create_models.py  0002_set_default_date_in_plan.py  0003_set_min_value_plans_point.py  0004_add_many_to_many_chats_and_namespaces_to_products.py  0005_set_null_related_namespaces_chats.py  0006_set_null_related_employees_products.py  0007_set_default_base_value_products.py
product_app/models/: ChatsModel.py  EmployeesModel.py  EventTypesModel.py  EventsModel.py  NamespacesModel.py  PlansModel.py  ProductsModel.py
product_app/samples/: JiraComment.py  JiraCommentsList.py  JiraIssue.py  JiraIssueField.py  JiraIssueList.py  JiraIssueType.py  JiraSubtaskIssue.py  JiraSubtaskIssueField.py
product_app/serializers/: ChatsSerializer.py  EmployeesSerializer.py  EventTypesSerializer.py  EventsSerializer.py  GetEventsSerializer.py  NamespacesSerializer.py  PlansSerializer.py  ProductsSerializer.py
product_app/service/: JiraServices.py  Sauron.py  Telegram.py  Utils.py
product_app/views/: ChatsViewSets.py  EmployeesViewSets.py  EventTypesViewSets.py  EventsViewSets.py  NamespacesViewSets.py  PlansViewSets.py  ProductsViewSets.py
product_framework/: asgi.py  settings.py  urls.py  wsgi.py
web/: admin.py  apps.py  settings.py  urls.py
web/filters/: EventsDateFilter.py  PlansDateFilter.py
web/migrations/: 0001_init_models.py  0002_remove_is_dev_field.py
web/models/: ChatsModel.py  EmployeesModel.py  EventTypesModel.py  EventsModel.py  PlansModel.py  ProductsModel.py
web/views/: ChatsViewSets.py  EmployeesViewSets.py  (+7 more)
(+46 files in other folders)
