[tool.poetry]
name = "automation-product-framework-v2"
version = "0.1.0"
description = "Backend новой версии продуктового фреймворка"
authors = ["Dmitriy Aratin <dima.aratin0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
Markdown = "^3.4.1"
django-filter = "^22.1"
Django = "^4.1.4"
django-debug-toolbar-force = "^0.2"
django-extensions = "^3.2.1"
dataclasses-json = "^0.5.7"
arrow = "^1.2.3"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
celery = {extras = ["redis"], version = "^5.2.7"}
python-json-logger = "^2.0.4"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
dynaconf = "^3.1.11"
django-celery-beat = "^2.4.0"
django-celery-results = "^2.4.0"
eventlet = "^0.33.2"
pystache = "^0.6.0"
workalendar = "^16.4.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
pyupgrade = "^3.3.1"
django-debug-toolbar = "^3.8.1"
bandit = "^1.7.4"

[tool.mypy]
python_version = 3.10
ignore_errors = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
